switch to the chrome window on smaller viewports. fix footer centering.

--- a/resources/assets/sass/components/_footer.scss
+++ b/resources/assets/sass/components/_footer.scss
@@ -6,6 +6,7 @@ footer.main {
 	> ul {
 		list-style: none;
 		margin: 25px auto 35px;
+        padding: 0;
     }
 
 	> ul > li {
