--- a/resources/assets/sass/content/_home.scss
+++ b/resources/assets/sass/content/_home.scss
@@ -22,6 +22,13 @@
         height: 425px;
         position: relative;
     }
+
+    .browser-window {
+        display: none;
+        width: auto;
+        overflow: hidden;
+        .window-content { overflow: hidden; width: 100%; height: 100%; }
+    }
 }
 
 .home .container {
@@ -40,10 +47,9 @@
     overflow: hidden;
 }
 
-@media all and (max-width: 780px) {
-    .home .hero svg {
-        display: none;
-    }
+@media all and (max-width: 805px) {
+    .home .hero .macbook { display: none; }
+    .home .hero .browser-window { display: block; }
 
     .home .hero pre {
         position: relative;
